# ai_infra

./: .gitignore  README.md
.claude/agents/: email-cleanup.md
agents/email-cleanup/: README.md  pyproject.toml
agents/email-cleanup/src/email_cleanup/: __init__.py  server.py
agents/email-cleanup/src/email_cleanup/providers/: __init__.py  base.py  icloud.py
